Fixes content overflow

--- a/styles/nitro.less
+++ b/styles/nitro.less
@@ -44,6 +44,7 @@ html, body, .nitro-page {
     position: relative;
 
     flex: auto;
+    overflow-y: auto;
 }
 
 .nitro-disable-transitions,
